--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is Nodejs Course",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/addonamit01/nodejs-course-2022#readme",
   "dependencies": {
-    "nodemon": "^2.0.19"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "mongodb": "^4.9.0",
+    "mongoose": "^6.5.4",
+    "nodemon": "^2.0.19",
+    "pug": "^3.0.2"
   }
 }
